--- a/index.html
+++ b/index.html
@@ -89,9 +89,7 @@
           </div>
           <div class="col-lg-6">
             <img
-              class="title-img"
-              src="images/iphone6.png"
-              alt="iphone-mockup"
+              class="title-img" src="images/iphone6.png" alt="iphone-mockup"
             />
           </div>
         </div>
