--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
               <i class="fa-brands fa-google-play"></i> Download
             </button>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-6 dog-image">
             <img
-              class="title-img" src="images/iphone6.png" alt="iphone-mockup"
+              class="title-image" src="images/iphone6.png" alt="iphone-mockup"
             />
           </div>
         </div>
