--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
   <body>
     <section id="title">
-      <div class="container-fluid">
+      <div class="title container-fluid">
         <!-- Nav Bar -->
         <nav class="navbar navbar-expand-lg">
           <div class="container-fluid brand">
@@ -76,7 +76,7 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <h1>Meet new and interesting dogs nearby.</h1>
+            <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
             <button type="button" class="btn btn-dark btn-lg download-bt">
               <i class="fa-brands fa-apple"></i> Download
             </button>
@@ -89,7 +89,9 @@
           </div>
           <div class="col-lg-6 dog-image">
             <img
-              class="title-image" src="images/iphone6.png" alt="iphone-mockup"
+              class="title-image"
+              src="images/iphone6.png"
+              alt="iphone-mockup"
             />
           </div>
         </div>
@@ -99,41 +101,43 @@
     <!-- Features -->
 
     <section id="features">
-      <div class="row text-center">
-        <div class="col-lg-4">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-            <!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
-            <path
-              d="M243.8 339.8C232.9 350.7 215.1 350.7 204.2 339.8L140.2 275.8C129.3 264.9 129.3 247.1 140.2 236.2C151.1 225.3 168.9 225.3 179.8 236.2L224 280.4L332.2 172.2C343.1 161.3 360.9 161.3 371.8 172.2C382.7 183.1 382.7 200.9 371.8 211.8L243.8 339.8zM512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256zM256 48C141.1 48 48 141.1 48 256C48 370.9 141.1 464 256 464C370.9 464 464 370.9 464 256C464 141.1 370.9 48 256 48z"
-            />
-          </svg>
-          <h3>Easy to use.</h3>
-          <p>
-            So easy to use, even your dog <br />
-            could do it.
-          </p>
-        </div>
-        <div class="col-lg-4">
-          <i class="fa-solid fa-bullseye fa-3x icon"></i>
+      <div class="container-fluid">
+        <div class="row text-center">
+          <div class="col-lg-4">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+              <!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+              <path
+                d="M243.8 339.8C232.9 350.7 215.1 350.7 204.2 339.8L140.2 275.8C129.3 264.9 129.3 247.1 140.2 236.2C151.1 225.3 168.9 225.3 179.8 236.2L224 280.4L332.2 172.2C343.1 161.3 360.9 161.3 371.8 172.2C382.7 183.1 382.7 200.9 371.8 211.8L243.8 339.8zM512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256zM256 48C141.1 48 48 141.1 48 256C48 370.9 141.1 464 256 464C370.9 464 464 370.9 464 256C464 141.1 370.9 48 256 48z"
+              />
+            </svg>
+            <h3 class="features-title">Easy to use.</h3>
+            <p>
+              So easy to use, even your dog <br />
+              could do it.
+            </p>
+          </div>
+          <div class="col-lg-4">
+            <i class="fa-solid fa-bullseye fa-3x icon"></i>
 
-          <h3>Elite Clientele</h3>
-          <p>
-            We have all the dogs, the <br />
-            greatest dogs.
-          </p>
-        </div>
-        <div class="col-lg-4">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
-            <!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
-            <path
-              d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"
-            />
-          </svg>
-          <h3>Guaranteed to work.</h3>
-          <p>
-            Find the love of your dog's life <br />
-            or your money back.
-          </p>
+            <h3 class="features-title">Elite Clientele</h3>
+            <p>
+              We have all the dogs, the <br />
+              greatest dogs.
+            </p>
+          </div>
+          <div class="col-lg-4">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+              <!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. -->
+              <path
+                d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z"
+              />
+            </svg>
+            <h3 class="features-title">Guaranteed to work.</h3>
+            <p>
+              Find the love of your dog's life <br />
+              or your money back.
+            </p>
+          </div>
         </div>
       </div>
     </section>
@@ -147,7 +151,7 @@
         data-bs-ride="false"
       >
         <div class="carousel-inner">
-          <div class="carousel-item active">
+          <div class="carousel-item active container-fluid">
             <h2 class="testimonial-text">
               I no longer have to sniff other dogs for love. I've found the
               hottest Corgi on TinDog. Woof.
@@ -159,7 +163,7 @@
             />
             <em>Pebbles, New York</em>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item container-fluid">
             <h2 class="testimonial-text">
               My dog used to be so lonely, but with TinDog's help, they've found
               the love of their life. I think.
@@ -209,12 +213,14 @@
     <!-- Pricing -->
 
     <section id="pricing">
-      <h2>A Plan for Every Dog's Needs</h2>
-      <p>Simple and affordable price plans for your and your dog.</p>
+      <div class="container-fluid">
+        <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
+        <p>Simple and affordable price plans for your and your dog.</p>
+      </div>
 
       <div class="row text-center">
         <div class="pricing-column col col-lg-4 col-md-6">
-          <div class="card mb-4 rounded-3 shadow-sm ">
+          <div class="card mb-4 rounded-3 shadow-sm">
             <div class="card-header py-3">
               <h3>Chihuahua</h3>
             </div>
@@ -245,7 +251,7 @@
             </div>
           </div>
         </div>
-        <div class="pricing-column col col-lg-4 ">
+        <div class="pricing-column col col-lg-4">
           <div class="card mb-4 rounded-3 shadow-sm col-md-12">
             <div class="card-header py-3">
               <h3>Mastiff</h3>
@@ -268,15 +274,39 @@
     <!-- Call to Action -->
 
     <section id="cta">
-      <h3>Find the True Love of Your Dog's Life Today.</h3>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
+      <div class="container-fluid">
+        <h3 class="big-heading">
+          Find the True Love of Your Dog's Life Today.
+        </h3>
+        <button type="button" class="btn btn-dark btn-lg download-bt">
+          <i class="fa-brands fa-apple"></i> Download
+        </button>
+        <button type="button" class="btn btn-light btn-lg download-bt">
+          <i class="fa-brands fa-google-play"></i> Download
+        </button>
+      </div>
     </section>
 
     <!-- Footer -->
 
     <footer id="footer">
-      <p>© Copyright TinDog</p>
+      <div class="container-fluid">
+        <div class="row justify-content-center footer-icon">
+          <div class="col-auto">
+            <i class="fa-brands fa-twitter"></i>
+          </div>
+          <div class="col-auto">
+            <i class="fa-brands fa-facebook-f"></i>
+          </div>
+          <div class="col-auto">
+            <i class="fa-brands fa-instagram"></i>
+          </div>
+          <div class="col-auto">
+            <i class="fa-solid fa-envelope"></i>
+          </div>
+        </div>
+        <p>© Copyright TinDog</p>
+      </div>
     </footer>
   </body>
 </html>
